server/compilers/goLiteJS/src/test/ml1/valid/switch1.go
// switch statement support
package main

func main() {
    switch x {
    default:
    case 0: _ = 1+1
    case 1, 2: f()
    }

    switch {
    case exp1:
    case exp2: _ = 1+1
    case exp3: f()
    }
}
