server/compilers/goLiteJS/src/test/ml1/invalid/shortdecl3.go
// missing commas
package main

func main() {
    x, y := 1 2
}
